--- a/.github/workflows/test_wkflw.yml
+++ b/.github/workflows/test_wkflw.yml
@@ -11,13 +11,13 @@ jobs:
     steps: 
         - uses: actions/checkout@v4
         - run: |
-            python test/unit/test_math_lib.py
+            python test/unit/test_my_utils.py
   run_func_test:
     runs-on: ubuntu-latest 
     steps: 
         - uses: actions/checkout@v4
         - run: |
-            bash test/func/test_add.sh
+            bash test/func/test_print_fires.sh
   run_style_check:
     runs-on: ubuntu-latest
     steps:
