--- a/.github/workflows/test_wkflw.yml
+++ b/.github/workflows/test_wkflw.yml
@@ -14,7 +14,7 @@ jobs:
           with: 
             environment-file: environment.yml
             init-shell: bash
-        - run: 
+        - run: |
             micromamba activate swe4s
             python test/test_my_utils.py
   run_func_test:
