--- a/.github/workflows/test_wkflw.yml
+++ b/.github/workflows/test_wkflw.yml
@@ -15,6 +15,7 @@ jobs:
             environment-file: environment.yml
             init-shell: bash
         - run: |
+            eval "$(micromamba shell hook --shell bash)"
             micromamba activate swe4s
             python test/test_my_utils.py
   run_func_test:
